--- a/Design/styles.css
+++ b/Design/styles.css
@@ -4,6 +4,12 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+.content {
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-bottom: 70px;
+}
+
 .hero {
   background: #f9f7fe;
   text-align: center;
@@ -49,6 +55,19 @@
   padding: 20px;
   border-radius: 5px;
   text-decoration: none;
+}
+
+.primary-link {
+  text-decoration: none;
+  background: var(--secondary-color);
+  border-radius: 4px;
+  border-color: #6c63ff;
+  color: var(--primary-color);
+  font-size: 15px;
+  line-height: 27px;
+  padding: 15px 30px;
+
+  font-family: "Nunito";
 }
 
 @media (max-width: 600px) {
