--- a/Design/styles.css
+++ b/Design/styles.css
@@ -70,6 +70,11 @@
   font-family: "Nunito";
 }
 
+.titre {
+  font-family: "Nunito";
+  font-weight: bold;
+}
+
 @media (max-width: 600px) {
   .contact-link,
   .about-link {
