--- a/Design/styles.css
+++ b/Design/styles.css
@@ -81,4 +81,9 @@
     font-size: 15px;
     text-align: center;
   }
+  .primary-link {
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+  }
 }
