--- a/Design/styles.css
+++ b/Design/styles.css
@@ -10,6 +10,16 @@
   padding-bottom: 70px;
 }
 
+.about-hero {
+  background: #f9f7fe;
+  font-family: "Nunito";
+  color: black;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 12px;
+}
 .hero {
   background: #f9f7fe;
   text-align: center;
@@ -25,7 +35,8 @@
   font-size: 25px;
 }
 
-.hero h1 {
+.hero h1,
+.about-hero h1 {
   font-size: 60px;
   font-weight: bold;
   line-height: 1, 25;
@@ -75,6 +86,11 @@
   font-weight: bold;
 }
 
+.me {
+  display: block;
+  border-radius: 12px;
+}
+
 @media (max-width: 600px) {
   .contact-link,
   .about-link {
@@ -85,5 +101,9 @@
     display: block;
     width: fit-content;
     margin: 0 auto;
+  }
+
+  .me {
+    display: none;
   }
 }
