--- a/Design/styles.css
+++ b/Design/styles.css
@@ -58,7 +58,8 @@
 }
 
 .contact-link,
-.about-link {
+.about-link,
+.contact-form {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
@@ -82,6 +83,35 @@
   font-family: "Nunito";
 }
 
+.contact100-form-btn {
+  text-decoration: none;
+  background: var(--secondary-color);
+  border-radius: 6px;
+  border-color: #6c63ff;
+  color: var(--primary-color);
+  font-size: 15px;
+  line-height: 27px;
+  padding: 5px 15px;
+
+  font-family: "Nunito";
+}
+
+.wrap-input100 {
+  border-radius: 4px;
+  border-color: #6c63ff;
+  font-size: 15px;
+  line-height: 27px;
+}
+
+.contact100-form-title {
+  color: white;
+  font-size: 20px;
+  line-height: 50px;
+
+  font-family: "Nunito";
+  font-weight: 400;
+}
+
 .titre {
   font-family: "Nunito";
   font-weight: bold;
@@ -96,6 +126,25 @@
   display: block;
   border-radius: 12px;
   padding-bottom: 40px;
+}
+
+.contact-buttons {
+  text-align: center;
+  text-decoration: none;
+  background: var(--secondary-color);
+  max-width: 15%;
+  border-color: #6c63ff;
+  color: var(--primary-color);
+  font-size: 20px;
+  line-height: 50px;
+
+  font-family: "Nunito";
+}
+
+.contact-icons {
+  padding-left: 40px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 @media (max-width: 600px) {
