--- a/Design/styles.css
+++ b/Design/styles.css
@@ -4,6 +4,40 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+.website-title {
+  font-size: 20px;
+  line-height: 42px;
+  margin-left: 15px;
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+nav {
+  padding: 20px 0;
+  text-decoration: none;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--primary-color);
+  text-decoration: none;
+}
 .content {
   padding-left: 70px;
   padding-right: 70px;
