--- a/Design/styles.css
+++ b/Design/styles.css
@@ -12,6 +12,11 @@
   text-decoration: none;
 }
 
+.logo-footer {
+  width: 10%;
+  margin-left: 15px;
+}
+
 nav {
   padding: 20px 0;
   text-decoration: none;
@@ -38,11 +43,6 @@ nav li.active a {
   color: var(--primary-color);
   text-decoration: none;
 }
-.content {
-  padding-left: 70px;
-  padding-right: 70px;
-  padding-bottom: 70px;
-}
 
 .about-hero,
 .work-hero {
@@ -51,8 +51,7 @@ nav li.active a {
   color: black;
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+
   border-radius: 12px;
 }
 .hero {
@@ -179,6 +178,32 @@ nav li.active a {
   padding-left: 40px;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+footer {
+  background-color: var(--secondary-color);
+  margin: 60px 0;
+  padding-top: 15px;
+  padding-bottom: 7px;
+  margin-bottom: 0px;
+
+  color: var(--primary-color);
+  font-size: 13px;
+  font-family: "Nunito";
+}
+
+.text-legals {
+  text-align: end;
+}
+
+.icons-footer {
+  text-align: center;
+}
+
+.icone {
+  padding-left: 10px;
+  padding-right: 10px;
+  color: var(--primary-color);
 }
 
 @media (max-width: 600px) {
